# Tesla-Inspired-LLM-Prompts

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  advanced.md  federated.py  mkdocs.yml  pyproject.toml  refinement.py  rlhf.py  safety.py  test_advanced_features.py
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: advanced.md  api.md  cli.md  contribute.md  dev_prompts.md  index.md  modes.md  personas.md  roadmap.md  score.md  usage.md
evaluation/: requirements.txt  run_eval.py
examples/: persona_blend.ipynb  quick_start.ipynb  rewrite.ipynb  scoring.ipynb
metadata/: example_prompt.json  schema.json
prompts/: dev_prompt_aether_engineer.txt  dev_prompt_dynamo_core.txt  dev_prompt_luminal_cartographer.txt  dev_prompt_magnetic_foundry.txt  dev_prompt_plasma_cohort.txt  dev_prompt_quantum_flux.txt  dev_prompt_resonant_network.txt  dev_prompt_singularity_bridge.txt  dev_prompt_stellar_laboratory.txt  dev_prompt_temporal_harmonics.txt  prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt
prompts/developer/: reward_audit.txt  safety_review.txt
scripts/: lint_markdown.py  validate_metadata.py
teslamind/: __init__.py  advanced.py  ai_client.py  cache.py  cli.py  config.py  exceptions.py  federated.py  logger.py  metrics.py  persona.py  prompt.py  refinement.py  rlhf.py  safety.py  templates.py
teslamind/models/: __init__.py  prompt.py  score.py  session.py  (+1 more)
tests/: test_advanced.py  test_advanced_compat.py  test_advanced_features.py  test_cli.py  test_models.py  test_modes_personas.py  test_prompt.py  test_repository_integrity.py
(+12 files in other folders)
