[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "teslamind"
version = "0.1.0"
description = "Tesla-inspired LLM prompt toolkit"
authors = [{name="TeslaMind"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/Dantheman23-coder/Tesla-Inspired-LLM-Prompts"
Documentation = "https://dantheman23-coder.github.io/Tesla-Inspired-LLM-Prompts"

[project.scripts]
teslamind = "teslamind.cli:main"

[tool.mypy]
python_version = "3.10"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
